# licence_audit

./: .changie.yaml  .commitlintrc.json  .gitignore  .mise.toml  AGENTS.md  CHANGELOG.md  DESIGN.md  DEV.md  PRODUCT.md  README.md  THIRD_PARTY_NOTICES.txt  gleam.toml  justfile  manifest.toml
.changes/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md
.changes/unreleased/: Added-20260523-000000.yaml  Added-20260523-000001.yaml  Added-20260523-000002.yaml  Added-20260523-000003.yaml  Added-20260523-000004.yaml  Added-20260523-000005.yaml  Added-20260523-000006.yaml  Added-20260524-160000.yaml  Added-20260524-162200.yaml  Added-20260524-164500.yaml  Added-20260524-180000.yaml  Added-20260531-000000.yaml  Added-20260531-140000.yaml  Added-20260601-000000.yaml  Added-20260601-120000.yaml  Added-20260602-140936.yaml  Changed-20260524-154500.yaml  Changed-20260525-122000.yaml  Changed-20260526-170517.yaml  Changed-20260531-000001.yaml  Changed-20260602-160243.yaml  Changed-20260604-221801.yaml  Changed-20260605-153659.yaml  Changed-20260605-160459.yaml  Changed-20260605-162651.yaml  Changed-20260607-160004.yaml  (+26 more)
.github/: release-install.md.tmpl
.impeccable/: design.json
docs/: check.md  notices.md  sbom-comparison-ort.md  sbom.md  update.md  vulns.md
native/licence_audit_toml/: Cargo.toml
native/licence_audit_toml/src/: main.rs
src/: licence_audit.gleam  licence_audit_toml_ffi.erl  license_audit.gleam
test/: licence_audit_test.gleam  license_audit_test.gleam
website/: astro.config.mjs  package.json  pnpm-lock.yaml
(+114 files in other folders)
