[package]
name = "licence_audit_toml"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "licence_audit_toml"
path = "src/main.rs"

[dependencies]
toml_edit = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
